--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Node API Challenge",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/webapi-challenge.git"
@@ -25,6 +27,7 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "knex-cleaner": "^1.3.0"
+    "knex-cleaner": "^1.3.0",
+    "nodemon": "^2.0.2"
   }
 }
