--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node API Challenge",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
     "start": "nodemon index.js"
   },
   "repository": {
